--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,7 @@
 
-spring.datasource.url = jdbc:mysql://localhost:3306/DHHPODCASTDB
-spring.datasource.username = root
-spring.datasource.password =tochukwu
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
+spring.active.
 
-server.port=8081
 
-#cloudinary_name =${CLOUDINARY_NAME:ds34mo0u9}
-#cloudinary_api_key = ${CLOUDINARY_API_KEY:935786896919439}
-#cloudinary_api_secret  =${CLOUDINARY_API_SECRET:GlXzSOcJkdpNf4D8YN9nocjhy5c}
-#spring.servlet.multipart.max-file-size=10MB
-#spring.servlet.multipart.max-request-size=10MB
-
-cloudinary_name =${CLOUDINARY_NAME:dudfh5sbg}
-cloudinary_api_key = ${CLOUDINARY_API_KEY:549183644438494}
-cloudinary_api_secret  =${CLOUDINARY_API_SECRET:KsyrcK_0ZEM7qYomOBEZmEfInoo}
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
 
 
 # Paystack Secret Key Configuration
@@ -32,23 +14,6 @@ paystack.api.url=https://api.paystack.co
 paystack.api.transaction.url=https://api.paystack.co/transaction
 
 
-#spring.mail.host=ismprograms.org
-#spring.mail.port=465
-#spring.mail.username=info@ismprograms.org
-#spring.mail.password=YqzHmoTuD6kA
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=false
-#spring.mail.properties.mail.smtp.ssl.enable=true
-#spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
-
-## EmailService Integration Configuration
-spring.mail.host=smtp.gmail.com
-spring.mail.port=465
-spring.mail.username=christinotochukwu@gmail.com
-spring.mail.password=eqxgybgpsvzxnnqi
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.ssl.enable= true
 
 #server.port=8081
 
